src/formulator/src/snapshots/formulator__t__t0.snap
---
source: formulator/src/lib.rs
expression: domain
---
Domain {
    symbols: {
    },
    symbol_to_sym: {
    },
    sym_to_symbol: {
    },
    rules: [
    ],
}
